This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
7/3/17: Added special option to normalize all lenses when changing mag within
LM or on all mag changes; when changing between LM and nonLM, it now does
objective normalization too and uses one normalize call on FEI scopes.

6/25/17: Fix output of a pcm file for other Records when aligning whole tilt
series in IMOD, and two other issues when frame-saving is automatically
imposed with aligning in IMOD (In 3.6).

6/24/17: Added script command to set frame rate of DE camera.

6/24/17: Preliminary support for new FEI camera interface and Falcon 3 added.

6/15/17: Added property to set the maximum beam radius allowed when centering
beam with low dose tracking images in tilt series (In 3.6).

6/14/17: Fixed setting of drift settling for Eagle through plugin/server
(In 3.6).

6/9/17: SEM_3-6-9
6/2/17: Fixed use of K2 asynchronous readout to RAM when frame alignment is
selected (In 3.6).

5/25/17: Fixed reporting of frames saved and writing to frame mdoc when frame
saving is turned on for aligning in IMOD (In 3.6).

5/25/17: Made it restore the correct focus when autofocus is aborted after
starting from Low Dose View mode (In 3.6).

5/23/17: Script commands writing to an autodoc can write to global section if
there are no images yet.

5/23/17: Fixed SetUserSetting command for integer value, added update call
after this command so changes propagate through system.

5/17/17: Script processor now searches in current script first for a
function with no script name in front of it, thus allowing duplicate
function names in other scripts.

5/16/17: Fixed initial script checking to allow calling a function from both
another script and the script it is in (In 3.6).
