@@ -31,6 +31,7 @@
 #define ADOC_MAGIND "MagIndex"
 #define ADOC_ZVALUE "ZValue"
 #define ADOC_MINMAXMEAN "MinMaxMean"
+#define ADOC_PRIOR_DOSE "PriorRecordDose"
 #define ADOC_XEDGE "XedgeDxy"
 #define ADOC_YEDGE "YedgeDxy"
 #define ADOC_XEDGEVS "XedgeDxyVS"
@@ -40,6 +41,7 @@
 #define ADOC_STAGEOFF "StageOffsets"
 #define ADOC_FRAME_PATH "SubFramePath"
 #define ADOC_NUM_FRAMES "NumSubFrames"
+#define ADOC_DOSES_COUNTS "FrameDosesAndNumber"
 #define ADOC_DATE_TIME "DateTime"
 #define ADOC_DE12_VERSION "DE12-ServerSoftwareVersion"
 #define ADOC_DE12_PREEXPOSE "DE12-PreexposureTime(s)"
