@@ -197,6 +197,12 @@
             <TD class="style5">Minimum, maximum, and mean value for this image</TD>
           </TR>
           <TR VALIGN="top">
+            <TD class="style1">PriorRecordDose</TD>
+            <TD class="style5">For an image in a tilt series taken in Low Dose mode, the 
+              cumulative dose in the Record area prior to this image, including Record and 
+              Preview images and View images taken in tasks</TD>
+          </TR>
+          <TR VALIGN="top">
             <TD class="style1">XedgeDxy</TD>
             <TD class="style5">Edge displacement in X and Y for montage piece to the right of 
               this piece</TD>
@@ -238,6 +244,12 @@
           <TR VALIGN="top">
             <TD class="style1">NumSubFrames</TD>
             <TD class="style5">Number of subframes stored</TD>
+          </TR>
+          <TR VALIGN="top">
+            <TD class="style1">FrameDosesAndCounts</TD>
+            <TD class="style5">Dose per frame in electrons per square Angstrom followed by 
+              number of frames at that dose; variable-sized frame sums will have multiple 
+              pairs of such values</TD>
           </TR>
           <TR VALIGN="top">
             <TD class="style1">DateTime</TD>
